# sobol

./: .Rbuildignore  .Rhistory  .gitignore  CMakeLists.txt  CRAN-SUBMISSION  CRAN_COMPLIANCE.md  DESCRIPTION  ENHANCEMENT_OVERVIEW.html  ENHANCEMENT_OVERVIEW.md  ENHANCEMENT_PLAN.html  ENHANCEMENT_PLAN.md  ENHANCEMENT_README.html  ENHANCEMENT_README.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.html  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.html  MARKDOWN.md  NAMESPACE  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  README.Rmd  README.md  RELEASE_CHECKLIST.html  RELEASE_CHECKLIST.md  ROADMAP.md  R_PACKAGE_README.md  S3_IMPLEMENTATION.md  SUBISSUE_1_CORE_CODE.html  SUBISSUE_1_CORE_CODE.md  SUBISSUE_2_DOCUMENTATION.html  SUBISSUE_2_DOCUMENTATION.md  SUBISSUE_3_TESTS.html  SUBISSUE_3_TESTS.md  SUBISSUE_4_METADATA.html  SUBISSUE_4_METADATA.md  SUBISSUE_5_VIGNETTES.html  SUBISSUE_5_VIGNETTES.md  SUBISSUE_6_BENCHMARKS.html  (+13 more)
.github/: SUBISSUE_1_CORE_CODE.md  SUBISSUE_2_DOCUMENTATION.md  SUBISSUE_3_TESTS.md  SUBISSUE_4_METADATA.md  SUBISSUE_5_VIGNETTES.md  SUBISSUE_6_BENCHMARKS.md
.github/workflows/: cpp-tests.yml  r-tests.yml
R/: RcppExports.R  sobol-package.R  sobol_design.R  sobol_generator.R  sobol_points.R
articles/: index.md  sobol-sequences.html  sobol-sequences.md  sobol.html  sobol.md
benchmarks/: CMakeLists.txt  bench_sobol_core.cpp  bench_sobol_memory.cpp  bench_sobol_scalability.cpp
docs/: 404.html  CRAN_COMPLIANCE.md  GETTING_STARTED.md  LICENSE.html  MARKDOWN.md  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  README.md  ROADMAP.md  R_PACKAGE_README.md  S3_IMPLEMENTATION.md  TABLE_GENERATION.md  TESTING.md  TESTING_SUMMARY.md  authors.html  index.html  pkgdown.yml  sitemap.xml
docs/articles/: index.html  sobol-sequences.html
docs/reference/: index.html  print.sobol_generator.html  print.summary.sobol_generator.html  sobol-package.html  sobol_design.html  sobol_dimensions.html  sobol_generator.html  sobol_index.html  sobol_next.html  sobol_next_n.html  sobol_points.html  sobol_skip_to.html  summary.sobol_generator.html
include/sobol/: direction_numbers.hpp  precomputed_tables.hpp  primitive_polynomial.hpp  r_api.hpp  sobol.hpp
inst/: WORDLIST
inst/benchmarks/: README.md  compare_sobol_vs_pomp.R  profile_operations.R
inst/examples/: usage_examples.R
inst/include/sobol/: direction_numbers.hpp  precomputed_tables.hpp  primitive_polynomial.hpp  r_api.hpp  sobol.hpp
man/: print.sobol_generator.Rd  print.summary.sobol_generator.Rd  sobol-package.Rd  sobol_design.Rd  sobol_dimensions.Rd  sobol_generator.Rd  sobol_index.Rd  sobol_next.Rd  sobol_next_n.Rd  sobol_points.Rd  sobol_skip_to.Rd  summary.sobol_generator.Rd
reference/: index.html  index.md  print.sobol_generator.html  print.sobol_generator.md  print.summary.sobol_generator.html  print.summary.sobol_generator.md  sobol-package.html  sobol-package.md  sobol.html  sobol_design.html  sobol_design.md  sobol_dimensions.html  sobol_dimensions.md  sobol_generator.html  sobol_generator.md  sobol_index.html  sobol_index.md  sobol_next.html  sobol_next.md  sobol_next_n.html  sobol_next_n.md  sobol_points.html  sobol_points.md  sobol_skip_to.html  sobol_skip_to.md  summary.sobol_generator.html  summary.sobol_generator.md
scripts/: test_coverage_summary.sh  test_table_generation.sh
src/: Makevars  Makevars.win  RcppExports.cpp  rcpp_interface.cpp
tests/: test_sobol.cpp  test_sobol_enhanced.cpp  testthat.R
tests/testthat/: test-sobol_design.R  test-sobol_enhanced.R  test-sobol_generator.R
tools/: generate_tables.cpp
vignettes/: sobol-sequences.Rmd  sobol.Rmd
